Updated index page to have some cards to inform people about me

--- a/index.html
+++ b/index.html
@@ -275,35 +275,48 @@
       <main class="container-md">
         <div>
           <div
-            class="container-fuild object-fit-scale bg-primary text-light border rounded p-3">
-            I am currently looking for work as a Software developer, Entry Level
-            Programmer, or Web Designer. I have knowledge with many lanuages and
-            I am proficent in Java, Javascript, HTML, CSS, PHP, Pearl, MySql,
-            EDI Mapping, C, and C++. Take a look at my
+            class="container-fuild object-fit-scale bg-primary text-light border rounded p-3 mt-2 mb-2">
+            I am currently seeking opportunities in software development,
+            specifically as an Entry Level Programmer or Web Designer. I possess
+            proficiency in a diverse set of programming languages, including
+            Java, JavaScript, HTML, CSS, PHP, Pearl, MySQL, EDI Mapping, C, and
+            C++. You can find more details about my skills and experience in my
             <a
-              class="link-light"
+              class="link-light text-decoration-underline"
               href="./resume/"
               >resume</a
             >
-            as well as my projects for additional information.<br /><br />
-            I am also currently looking for work as freelance programmer. I will
-            do contacts for building web sites from scratch or refactor existing
-            projects. I am interested in any sort work such as fixing bugs,
-            refactoring, commentting and data entry. Please use my contacts
-            found on the left to reach out to me.
+            and explore some of my projects for additional insights. <br />
+            <br />Additionally, I am available for freelance programming work,
+            offering services ranging from building websites from scratch to
+            refactoring existing projects. My expertise covers tasks such as bug
+            fixing, refactoring, commenting, and data entry. If you have any
+            projects in mind, please feel free to reach out to me using the
+            <a
+              class="link-light text-decoration-underline"
+              href="#contact"
+              >contact</a
+            >
+            information provided below.
           </div>
           <h1 class="container-fuild">About</h1>
           <article class="container-fuild">
-            <div>
-              Projects below are a collection of links to active sites that are
-              made available from several different hosts. Provided is a list of
-              their logos which link to their site for hosting details. Each
-              provide services in payments by month and year also they all have
-              an interface to interact with thier service. Currently these are
-              hosted with a free subscription and installed are websites that
-              can be modified for any sort of demonstration.
+            <div class="mt-2 mb-4">
+              The projects listed below feature active websites hosted on
+              various platforms. Each project includes a link to the respective
+              site for hosting details, accompanied by their logos. These
+              websites, currently hosted with a free subscription to help
+              showcase versatility and can be modified for demonstrations. I am
+              open to discussing any opportunities or collaborations you may
+              have in mind. Please use the
+              <a
+                class="link-dark text-decoration-underline"
+                href="#contact"
+                >contact</a
+              >
+              details below to get in touch with me.
             </div>
-            <ul class="logos">
+            <ul class="logos mb-4">
               <li>
                 <a
                   title="XAMPP"
@@ -383,154 +396,106 @@
               </li>
             </ul>
           </article>
-          <h1>Web Sites</h1>
-          <ul>
-            <li>
-              <a
-                href="http://97.130.1.114:3000/"
-                target="_blank"
-                rel="noopener noreferrer">
-                At Home Web Site: http://97.130.1.114:3000/
-              </a>
-              <br />
-              <img
-                style="height: 20px"
-                src="./img/xampp-logo-ac950edf.svg"
-                alt="XAMPP powered" />
-            </li>
-            <li>
-              <a
-                href="http://palmer81.github.io/palmer81/"
-                target="_blank"
-                rel="noopener noreferrer">
-                GitHub page: palmer81.github.io/palmer81
-              </a>
-              <br />
-              <img
-                style="height: 20px"
-                src="./img/GitHub-Logo.png"
-                alt="GitHub powered" />
-            </li>
-            <li>
-              <a href="https://github.com/palmer81">
-                GitHub page: https://github.com/palmer81
-              </a>
-              <br />
-              <img
-                style="height: 20px"
-                src="./img/GitHub-Logo.png"
-                alt="GitHub powered" />
-            </li>
-            <li>
-              <a
-                href="https://palmer81.github.io/"
-                target="_blank"
-                rel="noopener noreferrer">
-                GitHub page: palmer81.github.io
-              </a>
-              <br />
-              <img
-                style="height: 20px"
-                src="./img/GitHub-Logo.png"
-                alt="GitHub powered" />
-            </li>
-            <li>
-              <a
-                href="https://darknight65.000webhostapp.com/"
-                target="_blank"
-                rel="noopener noreferrer">
-                Blog: darknight65.000webhostapp.com
-              </a>
-              <br />
-              <img
-                style="height: 20px"
-                src="./img/000webhost-logo.svg"
-                alt="000WebHost powered" />
-            </li>
-            <li>
-              <a
-                href="http://darknight65.hyperphp.com/"
-                target="_blank"
-                rel="noopener noreferrer">
-                Tech Guppy Forum: darknight65.hyperphp.com
-              </a>
-              <br />
-              <img
-                style="height: 20px"
-                src="./img/hyperphp-logo.png"
-                alt="HyperPHP powered" />
-            </li>
-            <li>
-              <a
-                href="http://darknight65.liveblog365.com/"
-                target="_blank"
-                rel="noopener noreferrer">
-                eComerce: darknight65.liveblog365.com
-              </a>
-              <br />
-              <img
-                style="height: 20px"
-                src="./img/profrehost.png"
-                alt="ProFreeHost powered" />
-            </li>
-            <li>
-              Video Host:
-              <a
-                href="http://www.darknight65.byethost7.com/video/"
-                target="_blank"
-                rel="noopener noreferrer">
-                www.darknight65.byethost7.com/video
-              </a>
-              <br />
-              <img
-                style="height: 20px"
-                src="./img/byet-host-logo.png"
-                alt="Byet-Host powered" />
-            </li>
-            <li>
-              Static page in front of Video host:
-              <a
-                href="http://www.darknight65.byethost7.com/"
-                target="_blank"
-                rel="noopener noreferrer">
-                www.darknight65.byethost7.com
-              </a>
-              <br />
-              <img
-                style="height: 20px"
-                src="./img/byet-host-logo.png"
-                alt="Byet-Host powered" />
-            </li>
-            <li>
-              <a
-                href="https://scottpalmercom.wordpress.com"
-                target="_blank"
-                rel="noopener noreferrer">
-                Blog: scottpalmercom.wordpress.com
-              </a>
-              <br />
-              <img
-                style="height: 20px"
-                src="./img/wordpress-logo.svg"
-                alt="Wordpress powered" />
-            </li>
-            <li>
-              My
-              <a href="./resume/">Resume</a
-              ><a
-                href="./pdf/"
-                download="Resume-ScottPalmer.pdf"
-                ><img
-                  src="./img/file-arrow-down.svg"
-                  alt="Download PDF"
-                  style="height: fit-content"
-              /></a>
-            </li>
-          </ul>
-          <h6>
+          <h1>Highlight of Skills</h1>
+          <div class="row row-cols-1 row-cols-md-3 g-4">
+            <div class="col">
+              <div class="card h-100">
+                <div class="card-body">
+                  <img
+                    src="img/unsplash.jpg"
+                    alt="Some Code"
+                    class="card-img-top"
+                    style="object-fit: cover; height: 200px" />
+                  <h5 class="card-title">Web Basic</h5>
+                  <p class="card-text">
+                    Proficient in HTML, CSS, and JavaScript, with a solid
+                    understanding of responsive design principles. Experience in
+                    building and maintaining user interfaces for web
+                    applications, ensuring optimal user experience.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card h-100">
+                <div class="card-body">
+                  <img
+                    src="img/unsplash2.jpg"
+                    alt="Some Code"
+                    class="card-img-top"
+                    style="object-fit: cover; height: 200px" />
+                  <h5 class="card-title">Front-End Frameworks</h5>
+                  <p class="card-text">
+                    Familiarity with front-end frameworks such as React, Next,
+                    Express, or Vue.js, demonstrating the ability to work with
+                    modern development tools. Basic understanding of web
+                    performance optimization and browser compatibility issues.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card h-100">
+                <div class="card-body">
+                  <img
+                    src="img/skills-3270306_1280.jpg"
+                    alt="Some Code"
+                    class="card-img-top"
+                    style="object-fit: cover; height: 200px" />
+                  <h5 class="card-title">Knowledgeable and Reliable</h5>
+                  <p class="card-text">
+                    Strong attention to detail and a passion for creating
+                    visually appealing and intuitive interfaces. Knowledge of
+                    version control systems, such as Git, for effective
+                    collaboration in team environments.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card h-100">
+                <div class="card-body">
+                  <img
+                    src="img/solution-860229_1280.jpg"
+                    alt="Some Code"
+                    class="card-img-top"
+                    style="object-fit: cover; height: 200px" />
+                  <h5 class="card-title">Intelligent and Problem Solver</h5>
+                  <p class="card-text">
+                    Enthusiastic about staying updated on emerging trends and
+                    technologies in front-end development. Problem-solving
+                    skills, with a focus on troubleshooting and debugging
+                    front-end issues.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card h-100">
+                <div class="card-body">
+                  <img
+                    src="img/coffee-3297996_1280.jpg"
+                    alt="Some Code"
+                    class="card-img-top"
+                    style="object-fit: cover; height: 200px" />
+                  <h5 class="card-title">Skilled Communicator</h5>
+                  <p class="card-text">
+                    Excellent communication skills and a willingness to learn
+                    and adapt in a dynamic and fast-paced work environment.
+                    Showcase any personal or academic projects that highlight
+                    your skills and creativity in front-end development.
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <h6 class="mt-5">
             If you are interested in commuicating about a project or technology,
             please contact me @
-            <a href="mailto:palmer.sr@gmail.com">palmer.sr@gmail.com</a>
+            <a
+              href="mailto:palmer.sr@gmail.com?subject=Interested in communicating&body=Hi, Scott, I would like to talk to about some ideas or a job!"
+              >palmer.sr@gmail.com</a
+            >
             or call me at 630-725-8112. I will provide a free demonstration as
             soon as possible with request. I also will provide unlimited
             iterations with request.
@@ -550,7 +515,7 @@
                 Email
               </h2>
               <a
-                href="mailto:palmer.sr@gmail.com"
+                href="mailto:palmer.sr@gmail.com?subject=Interested in communicating&body=Hi, Scott, I would like to talk to about some ideas or a job!"
                 target="_blank"
                 rel="noopener noreferrer">
                 <img
@@ -559,7 +524,7 @@
                   alt="Gmail" />
               </a>
               <a
-                href="mailto:palmer.sr@outlook.com"
+                href="mailto:palmer.sr@outlook.com?subject=Interested in communicating&body=Hi, Scott, I would like to talk to about some ideas or a job!"
                 target="_blank"
                 rel="noopener noreferrer">
                 <img
@@ -568,7 +533,7 @@
                   alt="Outlook" />
               </a>
               <a
-                href="mailto:spalms65@hotmail.com"
+                href="mailto:spalms65@hotmail.com?subject=Interested in communicating&body=Hi, Scott, I would like to talk to about some ideas or a job!"
                 target="_blank"
                 rel="noopener noreferrer">
                 <img
@@ -577,7 +542,7 @@
                   alt="Hotmail" />
               </a>
               <a
-                href="mailto:spalms65@siu.edu"
+                href="mailto:spalms65@siu.edu?subject=Interested in communicating&body=Hi, Scott, I would like to talk to about some ideas or a job!"
                 target="_blank"
                 rel="noopener noreferrer">
                 <img
