Fixed wording in one the highlights

--- a/index.html
+++ b/index.html
@@ -482,8 +482,8 @@
                   <p class="card-text">
                     Excellent communication skills and a willingness to learn
                     and adapt in a dynamic and fast-paced work environment.
-                    Showcase any personal or academic projects that highlight
-                    your skills and creativity in front-end development.
+                    Willing to showcase any personal or academic projects that
+                    highlight skills and creativity in front-end development.
                   </p>
                 </div>
               </div>
