--- a/resume/index.html
+++ b/resume/index.html
@@ -624,148 +624,83 @@
             </span>
           </div>
         </div>
+
         <div
           id="contact"
-          style="width: -webkit-fill-available; padding-top: 120px"
-          class="container-fuild d-flex align-self-center flex-column justify-content-around flex-wrap">
-          <h1 class="fw-bolder">Contact Me</h1>
-          <div
-            class="container-fuild d-flex flex-row justify-content-around flex-wrap">
-            <div class="d-flex flex-column flex-wrap fw-bolder">
-              <h2
-                class="fw-bolder"
-                style="margin-block-start: 0.97em; margin-block-end: 0">
-                Email
-              </h2>
+          class="container-fluid">
+          <footer
+            class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+            <div class="col-md-4 d-flex align-items-center fs-1">
               <a
-                href="mailto:palmer.sr@gmail.com"
-                target="_blank"
-                rel="noopener noreferrer">
-                <img
-                  src="./../img/Gmail-Logo.png"
-                  class="sideLogo"
-                  alt="Gmail" />
+                href="/"
+                class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">
+                <svg
+                  class="bi"
+                  width="30"
+                  height="24">
+                  <use xlink:href="#bootstrap"></use>
+                </svg>
               </a>
-              <a
-                href="mailto:palmer.sr@outlook.com"
-                target="_blank"
-                rel="noopener noreferrer">
-                <img
-                  src="./../img/Outlook-Logo.png"
-                  class="sideLogo"
-                  alt="Outlook" />
-              </a>
-              <a
-                href="mailto:spalms65@hotmail.com"
-                target="_blank"
-                rel="noopener noreferrer">
-                <img
-                  src="./../img/Hotmail-Logo.png"
-                  class="sideLogo"
-                  alt="Hotmail" />
-              </a>
-              <a
-                href="mailto:spalms65@siu.edu"
-                target="_blank"
-                rel="noopener noreferrer">
-                <img
-                  src="./../img/Southern-Illinois-Salukis-Logo.png"
-                  class="sideLogo"
-                  alt="Saluki SIU Carbondale, IL" />
-              </a>
+              <span class="mb-3 mb-md-0 text-body-secondary custom"
+                >© 2024 Scott Palmer</span
+              >
             </div>
-            <div class="d-flex flex-column">
-              <h2
-                class="fw-bolder"
-                style="margin-block-start: 0.97em; margin-block-end: 0">
-                Freelance
-              </h2>
-              <a
-                href="https://www.fiverr.com/scott_r_palmer?public_mode=true"
-                target="_blank"
-                rel="noopener noreferrer">
-                <img
-                  src="./../img/fiverr-logo.png"
-                  alt="Fiverr Profile"
-                  class="sideLogo" />
-              </a>
-            </div>
-            <div class="d-flex flex-column">
-              <h2
-                class="fw-bolder"
-                style="margin-block-start: 0.97em; margin-block-end: 0">
-                Chat
-              </h2>
-              <a
-                href="https://techguppy.slack.com/"
-                target="_blank"
-                rel="noopener noreferrer">
-                <img
-                  src="./../img/slack-logo.png"
-                  alt="Slack Profile"
-                  class="sideLogo" />
-              </a>
-              <a
-                href="https://discord.com/users/826821172414513173"
-                target="_blank"
-                rel="noopener noreferrer">
-                <img
-                  src="./../img/Discord-logo.png"
-                  alt="Discord Profile"
-                  class="sideLogo" />
-              </a>
-            </div>
-            <div class="d-flex flex-column">
-              <h2
-                class="fw-bolder"
-                style="margin-block-start: 0.97em; margin-block-end: 0">
-                Social Network
-              </h2>
-              <a
-                href="https://www.facebook.com/palmer.sr"
-                target="_blank"
-                rel="noopener noreferrer">
-                <img
-                  src="./../img/Linkedin-logo.png"
-                  alt="LinkedIn Profile"
-                  class="sideLogo" />
-              </a>
-              <a
-                href="https://www.linkedin.com/in/scott-palmer-89549939/"
-                target="_blank"
-                rel="noopener noreferrer">
-                <img
-                  src="./../img/Facebook_logo_PNG9.png"
-                  alt="Facebook Profile"
-                  class="sideLogo" />
-              </a>
-              <a
-                href="https://twitter.com/palmersr10"
-                target="_blank"
-                rel="noopener noreferrer">
-                <img
-                  src="./../img/Twitter-Logo.png"
-                  alt="Twitter Profile"
-                  class="sideLogo" />
-              </a>
-            </div>
-            <div class="d-flex flex-column">
-              <h2
-                class="fw-bolder"
-                style="margin-block-start: 0.97em; margin-block-end: 0">
-                Coding/Project
-              </h2>
-              <a
-                href="https://github.com/palmer81"
-                target="_blank"
-                rel="noopener noreferrer">
-                <img
-                  src="./../img/GitHub-Logo.png"
-                  alt="Fiverr Profile"
-                  class="sideLogo" />
-              </a>
-            </div>
-          </div>
+
+            <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
+              <li class="ms-3">
+                <a
+                  class="text-body-secondary fs-1"
+                  href="mailto:palmer.sr@gmail.com?subject=Interested in communicating&body=Hi, Scott, I would like to talk to about some ideas or a job!">
+                  <i class="bi bi-envelope"></i>
+                </a>
+              </li>
+              <li class="ms-3">
+                <a
+                  class="text-body-secondary fs-1"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  href="https://www.linkedin.com/in/scott-palmer-89549939/">
+                  <i class="bi bi-linkedin"></i>
+                </a>
+              </li>
+              <li class="ms-3">
+                <a
+                  class="text-body-secondary fs-1"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  href="https://twitter.com/palmersr10">
+                  <i class="bi bi-twitter"></i>
+                </a>
+              </li>
+              <li class="ms-3">
+                <a
+                  class="text-body-secondary fs-1"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  href="https://techguppy.slack.com/">
+                  <i class="bi bi-slack"></i>
+                </a>
+              </li>
+              <li class="ms-3">
+                <a
+                  class="text-body-secondary fs-1"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  href="https://www.facebook.com/palmer.sr">
+                  <i class="bi bi-facebook"></i
+                ></a>
+              </li>
+              <li class="ms-3">
+                <a
+                  class="text-body-secondary fs-1"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  href="https://discord.com/users/826821172414513173">
+                  <i class="bi bi-discord"></i
+                ></a>
+              </li>
+            </ul>
+          </footer>
         </div>
       </main>
     </div>
