--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
       rel="profile" />
     <meta
       name="keywords"
-      content="Scott Palmer, Scott Robert Palmer, Scott R Palmer, Software Design, Software Designer, Software Enigneer, Software Programmer, Sotfware, Freelance, Freelancer, Freelancing, Programming, Java, Javascript, HTML, CSS, PHP, Pearl, C, C++, Cpluplus, Web Design, Web Designer, Programmer, Contract, OpenSource, GNU, Open Source, demonstration, CI/CD, Help Desk, IT Professional, Refactoring, Commenting, Debugging, Computer Science, Computer, Linux, Windows, MacOs, iphone, ipad, andriod, Mandriva, RedHat, MySql, SQL, Computer Security, Security, Interface, React, React.js, Next, Next.js, js, VS, VisualStudio Code, GitHub, Git" />
+      content="Scott, Palmer, Scott Palmer, Scott Robert Palmer, Scott R Palmer, Software Design, Software Designer, Software Enigneer, Software Programmer, Sotfware, Freelance, Freelancer, Freelancing, Programming, Java, Javascript, HTML, CSS, PHP, Pearl, C, C++, Cpluplus, Web Design, Web Designer, Programmer, Contract, OpenSource, GNU, Open Source, demonstration, CI/CD, Help Desk, IT Professional, Refactoring, Commenting, Debugging, Computer Science, Computer, Linux, Windows, MacOs, iphone, ipad, andriod, Mandriva, RedHat, MySql, SQL, Computer Security, Security, Interface, React, React.js, Next, Next.js, js, VS, VisualStudio Code, GitHub, Git" />
     <meta
       http-equiv="content-type"
       content="text/html; charset=utf-8" />
     <meta
       name="description"
-      content="Scott Palmer's GitHub Page for projects. These are projects to highlight Scott's skills to find work. Free demostrations and links to projects and addtional information." />
+      content="Scott Palmer's GitHub Page for projects. These are projects to highlight Scott's skills to find work. Free demostrations, links to projects and addtional information." />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0" />
@@ -276,18 +276,7 @@
         <div>
           <div
             class="container-fuild object-fit-scale bg-primary text-light border rounded p-3 mt-2 mb-2">
-            I am currently seeking opportunities in software development,
-            specifically as an Entry Level Programmer or Web Designer. I possess
-            proficiency in a diverse set of programming languages, including
-            Java, JavaScript, HTML, CSS, PHP, Pearl, MySQL, EDI Mapping, C, and
-            C++. You can find more details about my skills and experience in my
-            <a
-              class="link-light text-decoration-underline"
-              href="./resume/"
-              >resume</a
-            >
-            and explore some of my projects for additional insights. <br />
-            <br />Additionally, I am available for freelance programming work,
+            I am available for freelance programming work,
             offering services ranging from building websites from scratch to
             refactoring existing projects. My expertise covers tasks such as bug
             fixing, refactoring, commenting, and data entry. If you have any
@@ -297,7 +286,17 @@
               href="#contact"
               >contact</a
             >
-            information provided below.
+            information provided below.<br /><br />
+            I possess proficiency in a diverse set of programming languages, 
+            including Java, JavaScript, HTML, CSS, PHP, Pearl, MySQL, EDI Mapping, 
+            C, and C++. You can find more details about my skills and experience in 
+            my
+            <a
+              class="link-light text-decoration-underline"
+              href="./resume/"
+              >resume</a
+            >
+            and explore some of my projects for additional insights. <br />
           </div>
           <h1 class="container-fuild">About</h1>
           <article class="container-fuild">
