--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@
                   <p class="card-text">
                     Excellent communication skills and a willingness to learn
                     and adapt in a dynamic and fast-paced work environment.
-                    Willing to showcase any personal or academic projects that
+                    Willing to showcase any personal or academic project to
                     highlight skills and creativity in front-end development.
                   </p>
                 </div>
