Removed Home Link and fixed some text typos.

--- a/index.html
+++ b/index.html
@@ -123,19 +123,6 @@
                 aria-labelledby="navbarDropdown">
                 <li>
                   <a
-                    href="http://75.194.61.142:3000/"
-                    target="_blank"
-                    class="dropdown-item"
-                    rel="noopener noreferrer">
-                    <img
-                      src="./img/xampp-logo-ac950edf.svg"
-                      alt="XAMPP"
-                      style="height: 16px; width: 16px" />
-                    At Home Site
-                  </a>
-                </li>
-                <li>
-                  <a
                     href="https://github.com/palmer81"
                     class="dropdown-item"
                     target="_blank"
@@ -362,7 +349,7 @@
               </li>
               <li>
                 <a
-                  title="ProFreeHose"
+                  title="ProFreeHost"
                   href="https://profreehost.com/"
                   target="_blank"
                   rel="noopener noreferrer"
